--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.4",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-material-design-icons": "^4.11.0",
